# cafe_LLM

./: .gitignore  README.md  pyproject.toml
python_code/api/: agent_controller.py  development_code.py  main.py  pyproject.toml  test_input.json
python_code/api/agents/: __init__.py  classification_agent.py  details_agent.py  guard_agent.py  order_taking_agent.py  recommendation_agent.py  utils.py
python_code/api/recommendation_objects/: apriori_recommendations.json
python_code/notebooks/: build_vector_database.ipynb  firebase_uploader copy.ipynb  firebase_uploader.ipynb  prompt_engineering_tutorial.ipynb  recommendation_engine_training.ipynb  z_rough.ipynb
