[tool.poetry]
name = "cafe"
version = "0.1.0"
description = ""
authors = ["Kiran Shrestha <kiranshrestha2069@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
python-dotenv = "^1.1.0"
ipykernel = "^6.29.5"
pinecone = "^7.0.2"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
openai = "^1.82.1"
langchain-openai = "^0.3.18"
langchain-runpod = "^0.2.0"
scikit-learn = "^1.6.1"
mlxtend = "^0.23.4"
firebase-admin = "^6.8.0"
google-cloud-storage = "^3.1.0"
runpod = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
